Added 2D/3D Gallery option. Translations: - Updated Bulgarian - Updated Italian - Updated Croatian - Updated Romanian

--- a/res/values-da/text.xml
+++ b/res/values-da/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">VNC server (port 5901)</string>
     <string name="TVbootani">Brug mindre opstarts animation</string>
     <string name="TVlcddensity">LCD Density</string>
+    <string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Åben Samsung service tilstand</string>
 	<string name="TVkitchen">Åben GAOSP Køkken</string>
 	<string name="TVmemorythresholds">Memory Thresholds</string>
