--- a/res/values-fi/text.xml
+++ b/res/values-fi/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">VNC serveri (portti 5901)</string>
     <string name="TVbootani">Käytä pienempää käynnistysanimaatiota</string>
     <string name="TVlcddensity">LCD Density</string>
+    <string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Avaa Samsung palvelu moodi</string>
 	<string name="TVkitchen">Avaa GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Memory Thresholds</string>
