--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -299,11 +299,34 @@
 	android:layout_gravity="center_vertical"/>
 </LinearLayout>
 
-<!-- Service Mode -->
+<!-- Gallery -->
 <LinearLayout
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:background="#222222">
+<TextView
+	android:id="@+id/Textgallery"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVgallery"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<ToggleButton
+	android:id="@+id/gallery"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Service Mode -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
 <TextView
 	android:id="@+id/Textservice"
 	android:layout_width="wrap_content"
@@ -327,7 +350,8 @@
 <!-- Kitchen -->
 <LinearLayout
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:background="#222222">
 <TextView
 	android:id="@+id/Textkitchen"
 	android:layout_width="wrap_content"
