--- a/res/values-bg/text.xml
+++ b/res/values-bg/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">VNC сървър (порт 5901)</string>
     <string name="TVbootani">Използва малка boot анимация</string>
 	<string name="TVlcddensity">LCD Density</string>
+	<string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Отвори сервизен режим на Samsung</string>
 	<string name="TVkitchen">Отвори GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Прагове на Паметта</string>
