--- a/res/values-hr/text.xml
+++ b/res/values-hr/text.xml
@@ -11,7 +11,8 @@
     <string name="TVprovisionned">Provisioned</string>
     <string name="TVvnc">VNC server (port 5901)</string>
     <string name="TVbootani">Koristi manju animaciju pri podizanju</string>
-	<string name="TVlcddensity">LCD Density</string>
+	<string name="TVlcddensity">Gustoća LCD-a</string>
+	<string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Otvori Samsungov servis način rada</string>
 	<string name="TVkitchen">Otvori GAOSP kuhinju</string>
 	<string name="TVmemorythresholds">Memorijski pragovi</string>
