--- a/res/values-pl/text.xml
+++ b/res/values-pl/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">Serwer VNC (port 5901)</string>
     <string name="TVbootani">Użyj mniejszej animacji uruchamiania</string>
     <string name="TVlcddensity">LCD Density</string>
+    <string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Otwórz tryb serwisowy Samsunga</string>
 	<string name="TVkitchen">Otwórz GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Progi pamięci</string>
