--- a/res/values-pt-rBR/text.xml
+++ b/res/values-pt-rBR/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">Servidor VNC (porta 5901)</string>
     <string name="TVbootani">Usa uma animação de boot menor</string>
     <string name="TVlcddensity">LCD Density</string>
+    <string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Abre o modo de serviço Samsung</string>
     <string name="TVkitchen">Abre o GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Memory Thresholds</string>
