--- a/res/values-ru/text.xml
+++ b/res/values-ru/text.xml
@@ -12,6 +12,7 @@
 	<string name="TVvnc">Сервер VNC (порт 5901)</string>
 	<string name="TVbootani">Упрощённая анимация при загрузке</string>
 	<string name="TVlcddensity">LCD Density</string>
+	<string name="TVgallery">2D gallery</string>
 	<string name="TVservicemode">Войти в сервисный режим Samsung</string>
 	<string name="TVkitchen">Запустить "кухню" GAOSP</string>
 	<string name="TVmemorythresholds">Пороги памяти</string>
