--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -12,6 +12,7 @@
     <string name="TVvnc">VNC server (port 5901)</string>
     <string name="TVbootani">Use smaller bootanimation</string>
     <string name="TVlcddensity">LCD Density</string>
+    <string name="TVgallery">2D gallery</string>
     <string name="TVservicemode">Open Samsung service mode</string>
 	<string name="TVkitchen">Open GAOSP Kitchen</string>
 	<string name="TVmemorythresholds">Memory Thresholds</string>
