--- a/res/values-pt/description.xml
+++ b/res/values-pt/description.xml
@@ -20,5 +20,5 @@
 	<string name="contentapp">Aplicações que fornecem dados para o sistema. Exemplos são o Android Market, e o Google Sync. Estes necessitam de permanecer activos para gerar os conteúdos em intervalos regulares.</string>
 	<string name="emptyapp">Estas são apelidadas de "aplicações fantasma". São aplicações que foram usadas e terminadas. O Android geralmente tenta manter estas aplicações em memória para que abram mais rapidamente caso sejam usadas novamente. As "aplicações fantasma" não requerem qualquer processamento nem consomem energia, apenas usam memória que de outra forma estaria inutilizada. Quando essa memória é necessária para outras aplicações ou processos, a "aplicação fantasma" é terminada para libertar os recursos.</string>	
 	<string name="lcddensity">Lowering the density value will then expand the screen, allowing text to appear longer and not have to scroll or wrap as soon. It also increases spacing between home screen icons, which might come in handy if someone uses Multicon Widget or ADW Launcher’s columns change to pack in more shortcuts. Make a Nandroid Backup before!</string>
-	<string name="gallery">Use a 2D gallery instead of a 3D one. The 2D gallery is faster but not that fancy.</string>
+	        <string name="gallery">Usar a galeria em 2D em vez de em 3D. A galeria 2D é mais rápida, mas menos espectacular.</string>
 </resources>
