--- a/res/values-hr/description.xml
+++ b/res/values-hr/description.xml
@@ -21,4 +21,5 @@
 	<string name="emptyapp">Ovo nazivamo "duhovima." To su aplikacije koje ste otvorili, ali ste završili s njima. Android koristi jedinstven stil upravljanjem memorijom. Kada završi neka aktivnost, umjesto njenog prekidanja Android čuva aplikaciju u memoriji tako da njeno ponovno otvaranje je brže obrađeno. Ove "duhove" aplikacije ne koriste bateriju ili CPU vrijeme, nego samo pune RAM (radna memorija) koja bi inače bila prazna. Kada je ova memorija zatražena od druge aplikacije ili procesa, RAM se prazni i biva oslobođen za novu aplikaciju ili proces.</string>
 	<string name="lcddensity">Snižavanjem vrijednosti gustoće će proširiti ekran, dopuštajući da tekst izgleda duže i ne treba pomicati ili povlačiti tako skoro. To također povećava razmak između ikona na početnom zaslonu, koje može biti zgodno ako netko koristi promjenu stupaca u Multicon Widget-u ili ADW Launcher-u da sabije još više prečaca. Prvo napravite Nandroid Backup!</string>
 	<string name="gallery">Koristi galeriju u 2D-u umjesto u 3D-u. 2D galerija je brža ali ne tako elegantna.</string>
+<string name="interactive">Eksperimentalno!</string>
 </resources>
