--- a/res/values-hr/text.xml
+++ b/res/values-hr/text.xml
@@ -36,4 +36,11 @@
 	<string name="comptobig">Veličina compcache-a je prevelika!</string>
 	<string name="swapwarning">Morate imati vanjsku SD karticu sa swap particijom (Recovery > Format swap+fat32).</string>
 	<string name="defaults">Osnovne postavke uspješno učitane. Pritisnite "Primijeni novu konf." za spremanje.</string>
+<!-- Spinners -->
+    <string-array name="Ssampling">
+     <item>Baterija</item>
+        <item>Miješano</item>
+        <item>Performansa</item>
+    </string-array>
+</resources>
 </resources>
