--- a/res/values/description.xml
+++ b/res/values/description.xml
@@ -22,4 +22,6 @@
 	<string name="lcddensity">Lowering the density value will then expand the screen, allowing text to appear longer and not have to scroll or wrap as soon. It also increases spacing between home screen icons, which might come in handy if someone uses Multicon Widget or ADW Launcher’s columns change to pack in more shortcuts. Make a Nandroid Backup before!</string>
 	<string name="gallery">Use a 2D gallery instead of a 3D one. The 2D gallery is faster but not that fancy.</string>
 	<string name="interactive">Experimental!</string>
+	<string name="minfreq">Todo...</string>
+	<string name="maxfreq">Todo...</string>
 </resources>
