--- a/res/values/text.xml
+++ b/res/values/text.xml
@@ -23,6 +23,8 @@
 	<string name="TVcontentapp">Content provider (MB)</string>
 	<string name="TVemptyapp">Empty app (MB)</string>
 	<string name="TVinteractive">Interactive cpufreq governor</string>
+	<string name="TVminfreq">Min CPU frequency</string>
+	<string name="TVmaxfreq">Max CPU frequency</string>
 	<!-- Buttons -->
 	<string name="Bopen">Open</string>
     <string name="Bdefaults">Set defaults</string>
@@ -37,5 +39,25 @@
     	<item>Battery</item>
         <item>Mixed</item>
         <item>Performance</item>
+    </string-array>
+    <string-array name="Scpufreq">
+        <item>19.2 MHz</item>
+        <item>120.0 MHz</item>
+        <item>122.88 MHz</item>
+        <item>176.0 MHz</item>
+		<item>245.76 MHz</item>
+		<item>320.0 MHz</item>
+      	<item>352.0 MHz</item>
+      	<item>480.0 MHz</item>
+  		<item>528.0 MHz</item>
+     	<item>547.2 MHz</item>
+        <item>566.4 MHz</item>
+      	<item>585.6 MHz</item>
+  		<item>614.0 MHz</item>
+  		<item>633.2 MHz</item>
+   		<item>652.4 MHz</item>
+   		<item>671.6 MHz</item>
+   		<item>690.8 MHz</item>
+   		<item>710.0 MHz</item>
     </string-array>
 </resources>
