--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -400,6 +400,36 @@
 	android:layout_height="1dip"
 	android:background="#808080"/>
 
+<!-- GPS Calibration -->
+<LinearLayout
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+<TextView
+	android:id="@+id/Textcompcalibration"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+    android:text="@string/TVcompcalibration"
+	android:layout_marginLeft="4dip"
+	android:textSize="16sp"
+	android:textStyle="bold"
+	android:layout_weight="1"
+	android:layout_gravity="center_vertical"
+	android:clickable="true"/>
+<Button
+	android:id="@+id/compcalibration"
+    android:text="@string/Bopen"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_marginRight="4dip"
+	android:layout_gravity="center_vertical"/>
+</LinearLayout>
+
+<!-- Dividing line -->
+<View 
+	android:layout_width="fill_parent"		
+	android:layout_height="1dip"
+	android:background="#808080"/>
+
 <!-- Service Mode -->
 <LinearLayout
 	android:layout_width="fill_parent"
