--- a/res/values/description.xml
+++ b/res/values/description.xml
@@ -22,7 +22,5 @@
 	<string name="interactive">The interactive governor should improve responsiveness. It replaces the default ondemand governor.</string>
 	<string name="minfreq">Set your min CPU frequency. Default is 120.0 MHz. Overclocking your phone above 528 can cause instability or brick it. Be careful! Overclock at your own risk! Make a Nandroid Backup before!</string>
 	<string name="maxfreq">Set your max CPU frequency. Default is 528.0 MHz. Overclocking your phone above 528 can cause instability or brick it. Be careful! Overclock at your own risk! Make a Nandroid Backup before!</string>
-	<string name="ocwarning">Values between 528 and 700 are dangerous. Values over 700 are VERY DANGEROUS! You can damage your device!</string>
-	<string name="accept">Accept</string>
-	<string name="decline">Decline</string>
+	<string name="compcalibration">This will calibrate your compass. Follow instructions!</string>
 </resources>
